# functional-programming-in-rust

./: Cargo.toml  README.md  flake.nix  index.html  markdown.md  notes.org
